# disco-torch

./: .gitignore  LICENSE  README.md  pyproject.toml
disco_torch/: __init__.py  adapter.py  grpo.py  load_weights.py  meta_net.py  trainer.py  transforms.py  types.py  update_rule.py  utils.py  value_utils.py
examples/: catch_colab.ipynb  catch_disco.py
tests/: test_building_blocks.py  test_meta_net.py  test_utils.py
